# Memix

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REDIS_TO_SQLITE.md  ROADMAP.md  SECURITY.md  dna_rules.toml.example  memix-security.toml  package-lock.json  package.json  versions.json
daemon/: .env.example  .gitignore  Cargo.toml  LICENSE-BSL.md  build.rs
daemon/examples/: generate_keypair.rs
daemon/keys/: memix_public.der
daemon/rules/: decisions.toml
daemon/src/: config.rs  constants.rs  error.rs  indexer_manager.rs  license.rs  main.rs  retry.rs  server.rs  workspace_registry.rs
daemon/src/agents/: mod.rs  terminal_proxy.rs
daemon/src/brain/: hierarchy.rs  manager.rs  mod.rs  orchestrator.rs  schema.rs  validator.rs
daemon/src/context/: compiler.rs  hierarchy.rs  mod.rs
daemon/src/crypto/: engine.rs
daemon/src/discovery/: detector.rs  mod.rs  suggester.rs  tracker.rs
daemon/src/git/: archaeologist.rs  mod.rs
daemon/src/hooks/: claude.rs  cursor.rs  installer.rs  mod.rs  registry.rs  windsurf.rs
daemon/src/intelligence/: autonomous.rs  intent.rs  mod.rs  orchestrator.rs  predictor.rs  proactive.rs  scorer.rs
daemon/src/learning/: adaptive.rs  mod.rs
daemon/src/migrations/: mod.rs
daemon/src/observer/: background_indexer.rs  call_graph.rs  decisions.rs  differ.rs  dna.rs  embedding_store.rs  graph.rs  importance.rs  imports.rs  mod.rs  observer_manager.rs  oxc_semantic.rs  parser.rs  patterns.rs  skeleton.rs  watcher.rs  workspace_processor.rs
daemon/src/recorder/: flight.rs
daemon/src/risk/: mod.rs
daemon/src/rules/: mod.rs
daemon/src/runtime/: mod.rs  terminal_proxy.rs
daemon/src/search/: index.rs
daemon/src/storage/: compression.rs  hybrid.rs  mod.rs  redis.rs  sqlite.rs
daemon/src/sync/: crdt.rs  mod.rs  noop.rs  team.rs
daemon/src/token/: engine.rs  history.rs  manager.rs  mod.rs  toml_filter.rs  tracker.rs
daemon/src/token/filters/: builtin.toml  mod.rs
(+77 files in other folders)
