[package]
name = "memix-daemon"
version = "0.3.0-beta"
edition = "2021"
authors = ["DigitalVize LLC"]
description = "High-performance Memix backend daemon for persistent AI memory"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.28", features = ["tokio-rustls-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
async-trait = "0.1"
libc = "0.2"
dirs = "5"
hyper = "1"
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-service = "0.3"
notify = "6.1"
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-javascript = "0.23"
dashmap = "5"
once_cell = "1"
parking_lot = "0.12"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
regex = "1"
tantivy = "0.22"
thiserror = "1"
crdts = "7"
ring = "0.17"
hex = "0.4.3"
base64 = "0.22"
tiktoken-rs = "0.9.1"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7.1"
tree-sitter-kotlin-ng = "1.0.0"
tree-sitter-php = "0.23"
dotenvy = "0.15.7"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
fastembed = { version = "3", default-features = false, features = ["ort-load-dynamic"] }
ort-sys = "=2.0.0-rc.4"
mini-moka = "0.10.3"
petgraph = "0.6"
oxc_parser = "0.121"
oxc_semantic = "0.121"
oxc_resolver = "11.19"
oxc_span = "0.121"
oxc_allocator = "0.121"
oxc_ast = "0.121.0"
walkdir = "2"
blake3 = "1"

[profile.release]
lto = true
codegen-units = 1
